# lvgl-web-editor

./: INSTALL.de.md  INSTALL.md  MANUAL.de.md  MANUAL.md  README.de.md  README.md  index.html  package-lock.json  package.json
lvgl-wasm/: CMakeLists.txt  build.sh  main.c  post.js  pre.js
src/: App.css  App.tsx  index.css
src/codegen/: boards.ts  index.ts  picoProject.ts
src/components/: Canvas.tsx  Preview.tsx  PropertiesPanel.tsx  ScreenshotConverter.tsx  Toolbar.tsx  Toolbox.tsx  styles.css
src/store/: editorStore.ts
src/types/: lvgl.ts  widgetDefinitions.ts
